# PolySum

./: .gitignore  README.md
Cpp/: .gitignore  equation_iterator.cpp  equation_iterator.h  equation_iterator.tpp  linear_system.cpp  linear_system.h  makefile  polynomial.cpp  polynomial.h  polysum.cpp  polysum.h  polysum_p.cpp
Haskell/: .gitignore  ChangeLog.md  polysum.cabal
Haskell/src/: Main.hs  NamedPolynomial.hs  PolySum.hs  ReduceTerms.hs
Julia/PolySum/: Manifest.toml  Project.toml
Julia/PolySum/src/: PolySum.jl  coefs.jl  gmp_rationals.jl  macros.jl  python_interop.jl  rust_interop.jl  symbolic.jl
Proof/: .gitignore  config.tex  english.tex  macros.tex  portugues.tex
Proof/code/: english.alg  english.py  lexer_english.py  lexer_portugues.py  portugues.alg  portugues.py
Python/: polysum.py
Rust/polysum/: Cargo.toml
Rust/polysum/macros/procedural/polynomial_macro/: Cargo.toml
Rust/polysum/macros/procedural/polynomial_macro/src/: lib.rs
Rust/polysum/src/: lib.rs  main.rs  polysum.jl
Rust/polysum/src/approx/: mod.rs
Rust/polysum/src/lat/: file.tex
Rust/polysum/src/matrix/: mod.rs  prepare.rs
Rust/polysum/src/polynomials/: from_str.rs  iter.rs  mod.rs  ops.rs  terms.rs
Rust/polysum_c/: Cargo.toml
Rust/polysum_c/src/: lib.rs  polysum_c.h
Rust/polysum_c/test/: build.sh  run.sh  test  test.c
Rust/polysum_gtk/: Cargo.toml
Rust/polysum_gtk/src/: main.rs
Rust/polysum_gtk/src/gui/: mod.rs  model.rs  style.rs
