[package]
name = "polysum-gtk"
version = "0.1.0"
authors = ["fcard"]
edition = "2018"

[dependencies]
gtk = "^0.5.0"
gdk = "^0.9.0"
relm = "^0.15.2"
relm-derive = "^0.15.2"
relm-attributes = "^0.15.2"
polysum = { path = "../polysum" }
polynomial-macro = { path = "../polysum/macros/procedural/polynomial_macro" }
tempfile = "3"
